--- a/src/content/docs/d1/platform/limits.mdx
+++ b/src/content/docs/d1/platform/limits.mdx
@@ -52,8 +52,8 @@ Frequently asked questions related to D1 limits:
 D1 is designed for horizontal scale out across multiple, smaller (10 GB) databases, such as per-user, per-tenant or per-entity databases. D1 allows you to build applications with thousands of databases at no extra cost for isolating with multiple databases, as the pricing is based only on query and storage costs.
 
 - Each D1 database can store up to 10 GB of data, and you can create up to 50,000 separate D1 databases. This allows you to split a single monolithic database into multiple, smaller databases.
-- Working with smaller databases may allow you to query your databases more efficiently, and ultimately result in higher query throughput.
-- Smaller databases may require simpler query statements, reducing the processing time to return your query.
+- Scaling horizontally increases data isolation.
+- Queries on smaller databases execute faster.
 
 :::caution
 Note that the 10 GB limit of a D1 database cannot be further increased.
