Update src/content/docs/workers/tutorials/Generate Dynamic OG Images using Cloudflare Workers/index.mdx
Replacing ’ with '

Co-authored-by: hyperlint-ai[bot] <154288675+hyperlint-ai[bot]@users.noreply.github.com>

--- a/src/content/docs/workers/tutorials/Generate Dynamic OG Images using Cloudflare Workers/index.mdx
+++ b/src/content/docs/workers/tutorials/Generate Dynamic OG Images using Cloudflare Workers/index.mdx
@@ -709,7 +709,7 @@ You can customize the image by adjusting query parameters:
 
 ## Conclusion
 
-Congratulations! You’ve successfully harnessed the power of Cloudflare Workers to build a dynamic OG image generator. By leveraging the global edge network and serverless architecture, your application now delivers high-performance visuals with ease. Whether you’re scaling for millions of users or iterating on design tweaks, Cloudflare Workers ensure your images are always fast, reliable, and stunning.
+Congratulations! You've successfully harnessed the power of Cloudflare Workers to build a dynamic OG image generator. By leveraging the global edge network and serverless architecture, your application now delivers high-performance visuals with ease. Whether you're scaling for millions of users or iterating on design tweaks, Cloudflare Workers ensure your images are always fast, reliable, and stunning.
 
 This solution provides:
 
