Update src/content/docs/workers/tutorials/Generate Dynamic OG Images using Cloudflare Workers/index.mdx
Replacing ’ with '

Co-authored-by: hyperlint-ai[bot] <154288675+hyperlint-ai[bot]@users.noreply.github.com>

--- a/src/content/docs/workers/tutorials/Generate Dynamic OG Images using Cloudflare Workers/index.mdx
+++ b/src/content/docs/workers/tutorials/Generate Dynamic OG Images using Cloudflare Workers/index.mdx
@@ -51,7 +51,7 @@ When a user requests an OG image, the following happens:
     Image Generated: The image is built using React components styled with Tailwind CSS.
     Response Cached: The final image is returned and cached for future requests.
 
-Here’s how the process flows:
+Here's how the process flows:
 
 ```mermaid
 
