Update src/content/docs/workers/tutorials/Generate Dynamic OG Images using Cloudflare Workers/index.mdx
Replacing ’ with '

Co-authored-by: hyperlint-ai[bot] <154288675+hyperlint-ai[bot]@users.noreply.github.com>

--- a/src/content/docs/workers/tutorials/Generate Dynamic OG Images using Cloudflare Workers/index.mdx
+++ b/src/content/docs/workers/tutorials/Generate Dynamic OG Images using Cloudflare Workers/index.mdx
@@ -39,7 +39,7 @@ Building OG image generators can be challenging, especially when it comes to ens
     - Serverless Simplicity: Focus on building features, not managing infrastructure.
     - Unparalleled Performance: Process and serve requests at the edge for blazing-fast load times.
 
-By leveraging Cloudflare Workers, you get a serverless edge-computing environment that’s not only cost-efficient but also perfectly optimized for modern web applications.
+By leveraging Cloudflare Workers, you get a serverless edge-computing environment that's not only cost-efficient but also perfectly optimized for modern web applications.
 
 ## Workflow Overview
 
