Update src/content/docs/workers/tutorials/Generate Dynamic OG Images using Cloudflare Workers/index.mdx
Replacing ’ with '

Co-authored-by: hyperlint-ai[bot] <154288675+hyperlint-ai[bot]@users.noreply.github.com>

--- a/src/content/docs/workers/tutorials/Generate Dynamic OG Images using Cloudflare Workers/index.mdx
+++ b/src/content/docs/workers/tutorials/Generate Dynamic OG Images using Cloudflare Workers/index.mdx
@@ -27,7 +27,7 @@ What you'll accomplish:
     - Optimize performance with built-in caching.
     - Customize visuals with flexible fonts and design options..
 
-By the end, you’ll have a robust solution to enhance your social media presence.
+By the end, you'll have a robust solution to enhance your social media presence.
 
 GitHub repository: [Generate Dynamic OG Images using Cloudflare Workers](https://github.com/mohdlatif/og-image-generator-cloudflare-worker)
 
