Update src/content/docs/workers/tutorials/Generate Dynamic OG Images using Cloudflare Workers/index.mdx
Shouldn't this be started from 1 instead of 3

Co-authored-by: db-cloudflare <125887610+db-cloudflare@users.noreply.github.com>

--- a/src/content/docs/workers/tutorials/Generate Dynamic OG Images using Cloudflare Workers/index.mdx
+++ b/src/content/docs/workers/tutorials/Generate Dynamic OG Images using Cloudflare Workers/index.mdx
@@ -77,12 +77,11 @@ graph LR
 
 ## Before you begin
 
-Before you start, make sure you have:
+<Render file="prereqs" product="workers" />
 
-- A Cloudflare account. If you do not have one, [sign up](https://dash.cloudflare.com/sign-up/workers-and-pages) before continuing.
-- [Bun](https://bun.sh/) installed on your machine.
-- Basic familiarity with TypeScript and React.
-- A text editor or IDE of your choice.
+3. [Bun](https://bun.sh/) installed on your machine.
+4. Basic familiarity with TypeScript and React.
+5. A text editor or IDE of your choice.
 
 
 ## 1. Set up your development environment
