changing from persoanl website to github

--- a/src/content/docs/workers/tutorials/generate-dynamic-og-images-using-workers/index.mdx
+++ b/src/content/docs/workers/tutorials/generate-dynamic-og-images-using-workers/index.mdx
@@ -13,8 +13,8 @@ languages:
   - React
 spotlight:
   author: Mohammed Abdulatef Al-Musaibeli
-  author_bio_link: https://pwr.st
-  author_bio_source: website
+  author_bio_link: https://github.com/mohdlatif
+  author_bio_source: github
 ---
 
 # Generate Dynamic OG Images using Cloudflare Workers
