--- a/src/content/docs/workers/tutorials/generate-dynamic-og-images-using-workers/index.mdx
+++ b/src/content/docs/workers/tutorials/generate-dynamic-og-images-using-workers/index.mdx
@@ -35,9 +35,9 @@ GitHub repository: [Generate Dynamic OG Images using Cloudflare Workers](https:/
 
 Building OG image generators can be challenging, especially when it comes to ensuring global performance, scalability, and speed. This is where Cloudflare Workers excel.
 
-    - Global Reach: Deliver your images with ultra-low latency, no matter where your users are located.
-    - Serverless Simplicity: Focus on building features, not managing infrastructure.
-    - Unparalleled Performance: Process and serve requests at the edge for blazing-fast load times.
+- Global Reach: Deliver your images with ultra-low latency, no matter where your users are located.
+- Serverless Simplicity: Focus on building features, not managing infrastructure.
+- Unparalleled Performance: Process and serve requests at the edge for blazing-fast load times.
 
 By leveraging Cloudflare Workers, you get a serverless edge-computing environment that is not only cost-efficient but also perfectly optimized for modern web applications.
 
@@ -45,24 +45,21 @@ By leveraging Cloudflare Workers, you get a serverless edge-computing environmen
 
 When a user requests an OG image, the following happens:
 
-    Request Received: A URL with parameters is sent to a Cloudflare Worker.
-    Content Processed: The Worker extracts text, style, and font configurations from the URL.
-    Font Loaded: Fonts are retrieved using one of four methods, like Google Fonts or local files.
-    Image Generated: The image is built using React components styled with Tailwind CSS.
-    Response Cached: The final image is returned and cached for future requests.
+1. Request Received: A URL with parameters is sent to a Cloudflare Worker.
+2. Content Processed: The Worker extracts text, style, and font configurations from the URL.
+3. Font Loaded: Fonts are retrieved using one of four methods, like Google Fonts or local files.
+4. Image Generated: The image is built using React components styled with Tailwind CSS.
+5. Response Cached: The final image is returned and cached for future requests.
 
 Here is how the process flows:
 
 ```mermaid
-
 graph LR
     A[User Request] -->|URL Parameters| B[Cloudflare Worker]
     B --> C[Process Content]
     C --> D[Load Fonts]
     D --> E[Generate Image]
     E --> F[Cache and Respond]
-
-
 ```
 
 ### Key Benefits
@@ -82,7 +79,6 @@ graph LR
 3. Install [Bun](https://bun.sh/) on your machine.
 4. Basic familiarity with TypeScript and React.
 5. A text editor or IDE of your choice.
-
 
 ## 1. Set up your development environment
 
@@ -136,31 +132,22 @@ pnpm add -d @cloudflare/workers-types @types/bun @types/react @types/react-dom @
 
 ## 3. Configure project settings
 
-### Package.JSON configuration
+### package.json configuration
 
 Update the `package.json` file to include the type module and deployment scripts:
 
-```json
-
----
-
-filename: package.json
-
----
-
+```json title="package.json"
 {
-
-  "name": "og-image-generator-cloudlfare-worker",
-  "module": "index.ts",
-  "version": "1.0.0",
-  "type": "module",
-  "scripts": {
-    "dev": "wrangler dev src/index.ts",
-    "deploy": "wrangler deploy --minify src/index.ts"
-  },
-
+	"name": "og-image-generator-cloudlfare-worker",
+	"module": "index.ts",
+	"version": "1.0.0",
+	"type": "module",
+	"scripts": {
+		"dev": "wrangler dev src/index.ts",
+		"deploy": "wrangler deploy --minify src/index.ts"
+	}
+	// ...
 }
-
 ```
 
 The `type: "module"` field enables ES modules support, and the `--minify` flag in the deploy script ensures your Worker code is optimized for production.
@@ -171,43 +158,34 @@ Update the `tsconfig.json` file with the following configuration:
 
 ```json title="tsconfig.json"
 {
-  "compilerOptions": {
-    "target": "ESNext",
-    "lib": [
-      "ESNext",
-    ],
-    "moduleDetection": "force",
-    "jsx": "react-jsx", 
-    "module": "ESNext", 
-    "moduleResolution": "bundler",
-    "types": [
-      "bun-types",
-      "hono",
-      "@cloudflare/workers-types/2023-07-01"
-    ],
-    "resolveJsonModule": true,
-    "esModuleInterop": true,
-    "allowJs": true, 
-    "checkJs": false, 
-    "noEmit": true, 
-    "isolatedModules": true, 
-    "allowSyntheticDefaultImports": true,
-    "forceConsistentCasingInFileNames": true, 
-    "strict": true, 
-    "skipLibCheck": true, 
-    "noFallthroughCasesInSwitch": true,
-    "noUnusedLocals": false,
-    "noUnusedParameters": false,
-    "noPropertyAccessFromIndexSignature": false
-  },
-  "baseUrl": "./", 
-  "paths": {
-    "@/*": [ 
-      "./src/*"
-    ]
-  }
+	"compilerOptions": {
+		"target": "ESNext",
+		"lib": ["ESNext"],
+		"moduleDetection": "force",
+		"jsx": "react-jsx",
+		"module": "ESNext",
+		"moduleResolution": "bundler",
+		"types": ["bun-types", "hono", "@cloudflare/workers-types/2023-07-01"],
+		"resolveJsonModule": true,
+		"esModuleInterop": true,
+		"allowJs": true,
+		"checkJs": false,
+		"noEmit": true,
+		"isolatedModules": true,
+		"allowSyntheticDefaultImports": true,
+		"forceConsistentCasingInFileNames": true,
+		"strict": true,
+		"skipLibCheck": true,
+		"noFallthroughCasesInSwitch": true,
+		"noUnusedLocals": false,
+		"noUnusedParameters": false,
+		"noPropertyAccessFromIndexSignature": false
+	},
+	"baseUrl": "./",
+	"paths": {
+		"@/*": ["./src/*"]
+	}
 }
-
 ```
 
 Key TypeScript configuration features:
@@ -219,7 +197,7 @@ Key TypeScript configuration features:
 - Strict type checking enabled
 - Modern JavaScript features support
 
-### Configure Wrangler for Runtime Compatibility and Static Assets
+### Configure Wrangler for runtime compatibility and static assets
 
 Before starting, ensure your `wrangler.toml` includes these essential configurations:
 
@@ -281,46 +259,45 @@ Create a new file for handling different font loading methods:
 ```typescript title="src/getFonts.ts"
 // Example of Google Fonts loading strategy
 export async function googleFont(
-    text: string,
-    font: string,
-    weight: Weight = 400,
-    style: Style = 'normal'
+	text: string,
+	font: string,
+	weight: Weight = 400,
+	style: Style = "normal",
 ): Promise<{ data: ArrayBuffer; name: string; style: Style; weight: Weight }> {
-    const fontFamilyFetchName = font.replace(/ /g, '+');
-    const API = `https://fonts.googleapis.com/css2?family=${fontFamilyFetchName}:ital,wght@${
-        style === 'italic' ? '1' : '0'
-    },${weight}&text=${encodeURIComponent(text)}`;
+	const fontFamilyFetchName = font.replace(/ /g, "+");
+	const API = `https://fonts.googleapis.com/css2?family=${fontFamilyFetchName}:ital,wght@${
+		style === "italic" ? "1" : "0"
+	},${weight}&text=${encodeURIComponent(text)}`;
 
-    // Fetch the CSS containing the font URL
-    const css = await (
-        await fetch(API, {
-            headers: {
-                'User-Agent': 'Mozilla/5.0 ...' // User agent string
-            },
-        })
-    ).text();
+	// Fetch the CSS containing the font URL
+	const css = await (
+		await fetch(API, {
+			headers: {
+				"User-Agent": "Mozilla/5.0 ...", // User agent string
+			},
+		})
+	).text();
 
-    // Extract the font file URL from the CSS
-    const resource = css.match(/src: url\((.+)\) format\('(opentype|truetype)'\)/);
-    if (!resource) {
-        throw new Error('Failed to fetch font');
-    }
+	// Extract the font file URL from the CSS
+	const resource = css.match(
+		/src: url\((.+)\) format\('(opentype|truetype)'\)/,
+	);
+	if (!resource) {
+		throw new Error("Failed to fetch font");
+	}
 
-    // Fetch and return the actual font data
-    const res = await fetch(resource[1]);
-    const data = await res.arrayBuffer();
+	// Fetch and return the actual font data
+	const res = await fetch(resource[1]);
+	const data = await res.arrayBuffer();
 
-    return { data, name: font, style, weight };
+	return { data, name: font, style, weight };
 }
 
 // ... other font loading strategies available in the full source code
-
 ```
 
 :::note
-
 The font loading system supports multiple strategies including Google Fonts, GitHub-hosted fonts, direct URL fonts, and local fonts. Choose the strategy that best fits your needs.
-
 :::
 
 ## 5. Configure image loading
@@ -334,27 +311,30 @@ mkdir -p public/images
 Create a new file for handling image loading:
 
 ```typescript title="src/loadImage.ts"
-import { Context } from 'hono';
+import { Context } from "hono";
 
-export async function loadImage(c: Context, imagePath: string): Promise<string | null> {
-  try {
-    if (!c.env?.ASSETS) {
-      throw new Error('ASSETS binding is not configured');
-    }
+export async function loadImage(
+	c: Context,
+	imagePath: string,
+): Promise<string | null> {
+	try {
+		if (!c.env?.ASSETS) {
+			throw new Error("ASSETS binding is not configured");
+		}
 
-    const imageUrl = new URL(imagePath, c.req.url).toString();
-    const imageData = await c.env.ASSETS.fetch(imageUrl);
+		const imageUrl = new URL(imagePath, c.req.url).toString();
+		const imageData = await c.env.ASSETS.fetch(imageUrl);
 
-    // Get content-type from response
-    const contentType = imageData.headers.get('content-type') || 'image/png';
+		// Get content-type from response
+		const contentType = imageData.headers.get("content-type") || "image/png";
 
-    const arrayBuffer = await imageData.arrayBuffer();
-    const base64Image = Buffer.from(arrayBuffer).toString('base64');
-    return `data:${contentType};base64,${base64Image}`;
-  } catch (error) {
-    console.warn(`Failed to load image ${imagePath}:`, error);
-    return null;
-  }
+		const arrayBuffer = await imageData.arrayBuffer();
+		const base64Image = Buffer.from(arrayBuffer).toString("base64");
+		return `data:${contentType};base64,${base64Image}`;
+	} catch (error) {
+		console.warn(`Failed to load image ${imagePath}:`, error);
+		return null;
+	}
 }
 ```
 
@@ -368,7 +348,7 @@ This utility function:
 Use it in your templates like this:
 
 ```typescript
-const logoImage = await loadImage(c, '/images/your-logo.png');
+const logoImage = await loadImage(c, "/images/your-logo.png");
 ```
 
 :::note
@@ -380,24 +360,15 @@ Make sure your images are stored in the `public/images` directory and referenced
 Create the main image generation handler:
 
 ```typescript title="src/og.tsx"
-import { Hono } from 'hono';
+import { Hono } from "hono";
 
-import { ImageResponse } from '@cloudflare/pages-plugin-vercel-og/api';
-
-
+import { ImageResponse } from "@cloudflare/pages-plugin-vercel-og/api";
 
 const app = new Hono();
 
-
-
-export default app.get('/', async (c) => {
-
-  const { mainText, description, footerText } = c.req.query();
-
-  // Implementation details
-
+export default app.get("/", async (c) => {
+	const { mainText, description, footerText } = c.req.query(); // Implementation details
 });
-
 ```
 
 ## 7. Add visual styles
@@ -417,7 +388,7 @@ If no style parameter is provided or an invalid value is used, the generator def
 
 ![Style 1 Preview](https://img.playbook.com/NCDQskLa2E1MMJl7Ba8294ROlGUH_XGjvj6Rh53IGIs/Z3M6Ly9wbGF5Ym9v/ay1hc3NldHMtcHVi/bGljLzkzMGMzMjYw/LWM4ZjUtNGRlYS1i/MWFkLWNmZTg5ZDBm/Y2E1MQ)
 
-```url
+```txt
 /og?style=1&mainText=Building%20the%20Future&description=Modern%20web%20development
 ```
 
@@ -477,32 +448,25 @@ The style selection is implemented using a ternary chain in the code:
 
 ```typescript title="src/index.ts"
 const SocialCardTemplate =
-    c.req.query('style') === '2'
-        ? Style2()
-        : c.req.query('style') === '3'
-        ? Style3()
-        : c.req.query('style') === '4'
-        ? Style4()
-        : Style1();
+	c.req.query("style") === "2"
+		? Style2()
+		: c.req.query("style") === "3"
+			? Style3()
+			: c.req.query("style") === "4"
+				? Style4()
+				: Style1();
 ```
 
 This implementation allows for easy addition of new styles in the future by simply adding new conditions to the chain and corresponding style components.
 
 ```typescript title="src/og.tsx"
 function Style1() {
-
-  return (
-
-    <div tw="flex flex-col w-full h-full p-12 bg-gradient-to-br from-blue-900 to-indigo-700">
-
-      {/* Style implementation */}
-
-    </div>
-
-  );
-
+  return (
+    <div tw="flex flex-col w-full h-full p-12 bg-gradient-to-br from-blue-900 to-indigo-700">
+      {/* Style implementation */}
+    </div>
+  );
 }
-
 ```
 
 ## 8. Configure caching
@@ -517,39 +481,28 @@ Enable caching to:
 Here's how to implement caching with customizable durations:
 
 ```typescript title="src/index.ts"
-import { Hono } from 'hono';
-
-import { cache } from 'hono/cache';
-
-
+import { Hono } from "hono";
+import { cache } from "hono/cache";
 
 const app = new Hono()
-
-  .use('*', cache({
-
-    cacheName: async (c) => {
-
-      const url = new URL(c.req.url);
-
-      return `${c.req.method} ${url.pathname}${url.searchParams}`;
-
-    },
-
-    cacheControl: 'max-age=86400'
-
-  }))
-
-  .route('og', og);
-
+	.use(
+		"*",
+		cache({
+			cacheName: async (c) => {
+				const url = new URL(c.req.url);
+				return `${c.req.method} ${url.pathname}${url.searchParams}`;
+			},
+			cacheControl: "max-age=86400",
+		}),
+	)
+	.route("og", og);
 ```
 
 :::caution
-
 Make sure to configure appropriate cache durations based on your application's needs. The example uses a 24-hour cache duration.
-
 :::
 
-## Setting Up TypeScript Type Definitions
+## Set up TypeScript type definitions
 
 Let's create our type definitions to ensure smooth TypeScript integration. Create a new file `src/type.d.ts`:
 
@@ -558,28 +511,27 @@ interface CacheStorage {
 	default: Cache;
 }
 
-declare module '@cloudflare/pages-plugin-vercel-og/api' {
-	import { ImageResponse as VercelImageResponse } from '@vercel/og';
+declare module "@cloudflare/pages-plugin-vercel-og/api" {
+	import { ImageResponse as VercelImageResponse } from "@vercel/og";
 	export declare class ImageResponse extends Response {
 		constructor(...args: ConstructorParameters<typeof VercelImageResponse>);
 	}
 }
 
-declare module '*.woff2' {
+declare module "*.woff2" {
 	const content: ArrayBuffer;
 	export default content;
 }
 
-declare module '*.woff' {
+declare module "*.woff" {
 	const content: ArrayBuffer;
 	export default content;
 }
 
-declare module '*.ttf' {
+declare module "*.ttf" {
 	const content: ArrayBuffer;
 	export default content;
 }
-
 ```
 
 These type definitions are crucial for our project because they:
@@ -595,9 +547,7 @@ With these definitions in place, you'll get full TypeScript support and autocomp
 Deploy the application to Cloudflare Workers:
 
 ```bash
-
 bun run deploy
-
 ```
 
 ## Usage examples
@@ -611,16 +561,13 @@ https://your-worker.workers.dev/og?mainText=Hello%20World&description=A%20dynami
 You can customize the image by adjusting query parameters:
 
 - `mainText`: Main heading
-
 - `description`: Detailed description
-
 - `footerText`: Footer content
-
 - `style`: Visual style (1-4)
 
 ## Conclusion
 
-Congratulations! You've successfully harnessed the power of Cloudflare Workers to build a dynamic OG image generator. By leveraging the global edge network and serverless architecture, your application now delivers high-performance visuals with ease. Whether you're scaling for millions of users or iterating on design tweaks, Cloudflare Workers ensure your images are always fast, reliable, and stunning.
+Congratulations! You have successfully harnessed the power of Cloudflare Workers to build a dynamic OG image generator. By leveraging the global edge network and serverless architecture, your application now delivers high-performance visuals with ease. Whether you are scaling for millions of users or iterating on design tweaks, Cloudflare Workers ensure your images are always fast, reliable, and stunning.
 
 This solution provides:
 
@@ -631,16 +578,10 @@ This solution provides:
 
 The complete source code is available on [GitHub](https://github.com/mohdlatif/og-image-generator-cloudflare-worker).
 
-You have successfully created a dynamic OG image generator that runs at the edge. The application can now generate social media cards with:
-
 ## Related resources
 
-- [Cloudflare Workers documentation](https://developers.cloudflare.com/workers/)
-
+- [Cloudflare Workers documentation](/workers/)
 - [Hono framework](https://hono.dev/)
-
 - [Vercel OG Image Generation](https://vercel.com/docs/functions/og-image-generation)
-
-- [Cloudflare page plugin vercel/og](https://developers.cloudflare.com/pages/functions/plugins/vercel-og/)
-
+- [Cloudflare page plugin vercel/og](/pages/functions/plugins/vercel-og/)
 - [Tailwind CSS](https://tailwindcss.com/)
