Minor text adjustments

--- a/src/content/docs/workers/tutorials/generate-dynamic-og-images-using-workers/index.mdx
+++ b/src/content/docs/workers/tutorials/generate-dynamic-og-images-using-workers/index.mdx
@@ -31,7 +31,7 @@ By the end, you will have a robust solution to enhance your social media presenc
 
 GitHub repository: [Generate Dynamic OG Images using Cloudflare Workers](https://github.com/mohdlatif/og-image-generator-cloudflare-worker)
 
-## Why Use Cloudflare Workers?
+## Why use Cloudflare Workers?
 
 Building OG image generators can be challenging, especially when it comes to ensuring global performance, scalability, and speed. This is where Cloudflare Workers excel.
 
@@ -41,7 +41,7 @@ Building OG image generators can be challenging, especially when it comes to ens
 
 By leveraging Cloudflare Workers, you get a serverless edge-computing environment that is not only cost-efficient but also perfectly optimized for modern web applications.
 
-## Workflow Overview
+## Workflow overview
 
 When a user requests an OG image, the following happens:
 
@@ -62,7 +62,7 @@ graph LR
     E --> F[Cache and Respond]
 ```
 
-### Key Benefits
+### Key benefits
 
 - **Edge computing**: Generates images at the edge using Cloudflare Workers
 - **Modern rendering**: Utilizes Vercel's Satori library for high-quality image generation
@@ -540,7 +540,7 @@ These type definitions are crucial for our project because they:
 - Add proper typing for the Vercel OG image response
 - Allow direct importing of font files (`.woff2`, `.woff`, `.ttf`)
 
-With these definitions in place, you'll get full TypeScript support and autocompletion throughout your project. This makes development smoother and helps catch potential issues early.
+With these definitions in place, you will get full TypeScript support and autocompletion throughout your project. This makes development smoother and helps catch potential issues early.
 
 ## 9. Deploy your Worker
 
