Host images locally

--- a/src/content/docs/workers/tutorials/generate-dynamic-og-images-using-workers/index.mdx
+++ b/src/content/docs/workers/tutorials/generate-dynamic-og-images-using-workers/index.mdx
@@ -386,7 +386,7 @@ If no style parameter is provided or an invalid value is used, the generator def
 
 ### Style 1: Professional (Default)
 
-![Style 1 Preview](https://img.playbook.com/NCDQskLa2E1MMJl7Ba8294ROlGUH_XGjvj6Rh53IGIs/Z3M6Ly9wbGF5Ym9v/ay1hc3NldHMtcHVi/bGljLzkzMGMzMjYw/LWM4ZjUtNGRlYS1i/MWFkLWNmZTg5ZDBm/Y2E1MQ)
+![Style 1 Preview](~/assets/images/workers/tutorials/dynamic-og-images/style-1.png)
 
 ```txt
 /og?style=1&mainText=Building%20the%20Future&description=Modern%20web%20development
@@ -400,7 +400,7 @@ Features:
 
 ### Style 2: Eco-Tech
 
-![Style 2 Preview](https://img.playbook.com/oy6o1vYtQONp4zKf-W2GjpLLnGg1QMBlhmxZ7-TjGlM/Z3M6Ly9wbGF5Ym9v/ay1hc3NldHMtcHVi/bGljLzEwMWYzNWNj/LTUwYzItNDdmYi1h/ZGYxLTFhNjc1YWVh/MmI5NQ)
+![Style 2 Preview](~/assets/images/workers/tutorials/dynamic-og-images/style-2.png)
 
 ```txt
 /og?style=2&mainText=Green%20Summit&description=Sustainable%20Innovation
@@ -414,7 +414,7 @@ Features:
 
 ### Style 3: Corporate
 
-![Style 3 Preview](https://img.playbook.com/bxEGJ0xzjvwGOpfsW8OqQEwA1tMvhernc1ElS9SF0Tc/Z3M6Ly9wbGF5Ym9v/ay1hc3NldHMtcHVi/bGljL2QwYjQ5ODVj/LTczODItNDZjNS1i/MDAzLTMzOGNmYzdi/YzM2NA)
+![Style 3 Preview](~/assets/images/workers/tutorials/dynamic-og-images/style-3.png)
 
 ```txt
 /og?style=3&mainText=Company%20Update&description=Q4%20Results
@@ -428,7 +428,7 @@ Features:
 
 ### Style 4: GitHub Profile
 
-![Style 4 Preview](https://img.playbook.com/FqOr8WKk9_thMfSJmn7BTJMSogd3bnQSmKA9T-Nnf1w/Z3M6Ly9wbGF5Ym9v/ay1hc3NldHMtcHVi/bGljLzVhZWY3ZjE0/LWJlNTItNGU3Ny1h/Y2ZlLWMyZTQ5ZTU1/ZjIxYQ)
+![Style 4 Preview](~/assets/images/workers/tutorials/dynamic-og-images/style-4.png)
 
 ```txt
 /og?style=4
