--- a/src/content/docs/workers/tutorials/generate-dynamic-og-images-using-workers/index.mdx
+++ b/src/content/docs/workers/tutorials/generate-dynamic-og-images-using-workers/index.mdx
@@ -17,7 +17,7 @@ spotlight:
   author_bio_source: github
 ---
 
-import { PackageManagers, Render } from "~/components";
+import { PackageManagers, Render, Tabs, TabItem } from "~/components";
 
 Social media thrives on compelling visuals. With Cloudflare Workers, you can effortlessly generate dynamic Open Graph (OG) images that grab attention and boost platform performance. In this tutorial, you'll learn how to create a customizable OG image generator powered by serverless edge computing. Cloudflare Workers enable you to deliver blazing-fast visuals globally, ensuring a seamless experience for your users. Let's dive in to see how you can take your OG images to the next level with Cloudflare Workers.
 
