--- a/src/content/docs/workers/tutorials/generate-dynamic-og-images-using-workers/index.mdx
+++ b/src/content/docs/workers/tutorials/generate-dynamic-og-images-using-workers/index.mdx
@@ -77,7 +77,7 @@ graph TD
 
 <Render file="prereqs" product="workers" />
 
-3. Install [Bun](https://bun.sh/) on your machine.
+1. Install [Nodejs](https://nodejs.org/en) on your machine.
 
 You should also have:
 
@@ -91,7 +91,7 @@ Create a new Cloudflare Workers project using the Hono framework:
 <PackageManagers
 	type="create"
 	pkg="cloudflare@latest"
-	args="og-image-generator --template cloudflare-workers --pm bun"
+	args="og-image-generator --template cloudflare-workers --pm npm"
 />
 
 Navigate to the project directory:
@@ -104,32 +104,32 @@ cd og-image-generator
 
 Add the necessary packages to your project:
 
-<Tabs> <TabItem label="bun">
+<Tabs> <TabItem label="npm">
 
 ```sh
-bun add @cloudflare/pages-plugin-vercel-og autoprefixer postcss-cli react react-dom tailwindcss
-bun add -d @cloudflare/workers-types @types/bun @types/react @types/react-dom @vercel/og wrangler
+npm add @cloudflare/pages-plugin-vercel-og autoprefixer postcss-cli react react-dom tailwindcss
+npm add -d @cloudflare/workers-types @types/node @types/react @types/react-dom @vercel/og wrangler
 ```
 
 </TabItem> <TabItem label="npm">
 
 ```sh
 npm install @cloudflare/pages-plugin-vercel-og autoprefixer postcss-cli react react-dom tailwindcss
-npm install -d @cloudflare/workers-types @types/bun @types/react @types/react-dom @vercel/og
+npm install -d @cloudflare/workers-types @types/node @types/react @types/react-dom @vercel/og
 ```
 
 </TabItem> <TabItem label="yarn">
 
 ```sh
 yarn add @cloudflare/pages-plugin-vercel-og autoprefixer postcss-cli react react-dom tailwindcss
-yarn add -d @cloudflare/workers-types @types/bun @types/react @types/react-dom @vercel/og
+yarn add -d @cloudflare/workers-types @types/node @types/react @types/react-dom @vercel/og
 ```
 
 </TabItem> <TabItem label="pnpm">
 
 ```sh
 pnpm add @cloudflare/pages-plugin-vercel-og autoprefixer postcss-cli react react-dom tailwindcss
-pnpm add -d @cloudflare/workers-types @types/bun @types/react @types/react-dom @vercel/og
+pnpm add -d @cloudflare/workers-types @types/node @types/react @types/react-dom @vercel/og
 ```
 
 </TabItem> </Tabs>
@@ -169,7 +169,7 @@ Update the `tsconfig.json` file with the following configuration:
 		"jsx": "react-jsx",
 		"module": "ESNext",
 		"moduleResolution": "bundler",
-		"types": ["bun-types", "hono", "@cloudflare/workers-types/2023-07-01"],
+		"types": ["node-types", "hono", "@cloudflare/workers-types/2023-07-01"],
 		"resolveJsonModule": true,
 		"esModuleInterop": true,
 		"allowJs": true,
@@ -216,7 +216,7 @@ watch_dir = "public"
 ```
 </WranglerConfig>
 
-[The `nodejs_compat` flag](/workers/configuration/compatibility-flags/#nodejs-compatibility-flag) enables runtime compatibility features required by the OG image generation library, even when using Bun. While we're using Bun as our development runtime, this flag ensures all necessary APIs are available in the Workers environment. The `assets` configuration maps your Worker's public directory, allowing direct access to static files like fonts, images, and favicons through URL paths (for example, `/fonts/Inter.ttf`, `/images/logo.png`).
+The [`nodejs_compat` flag](/workers/configuration/compatibility-flags/#nodejs-compatibility-flag) enables runtime compatibility features required by the OG image generation library, ensuring all necessary APIs are available in the Workers environment. While we utilize a modern JavaScript runtime for development, this flag maintains consistency across environments. The `assets` configuration maps your Worker's public directory, allowing direct access to static files like fonts, images, and favicons through URL paths (for example, `/fonts/Inter.ttf`, `/images/logo.png`).
 
 ## 4. Configure font loading strategies
 
@@ -553,7 +553,7 @@ With these definitions in place, you will get full TypeScript support and autoco
 Deploy the application to Cloudflare Workers:
 
 ```bash
-bun run deploy
+npm run deploy
 ```
 
 ## Usage examples
